# tonic-middleware

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: action.yaml
example/: Cargo.toml  README.md  build.rs
example/proto/: estore.proto
example/src/: auth.rs  client.rs  orders.rs  products.rs  server.rs
integration_tests/: Cargo.toml  build.rs
integration_tests/proto/: test_services.proto
integration_tests/src/: lib.rs  proto.rs  services.rs
integration_tests/tests/: tests.rs
integration_tests/tests/common/: mod.rs
src/: lib.rs  middleware.rs  request_interceptor.rs
