workspace = { members = ["example", "integration_tests"] }
[package]
name = "tonic-middleware"
authors = ["Teimuraz Kantariya <teimuraz.kantaria@gmail.com>"]
categories = ["web-programming", "network-programming", "asynchronous", "authentication"]
description = "Async middleware and interceptor for Tonic services"
documentation = "https://github.com/teimuraz/tonic-middleware"
edition = "2021"
homepage = "https://github.com/teimuraz/tonic-middleware"
keywords = ["middleware", "interceptor", "tonic", "async", "grpc"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/teimuraz/tonic-middleware"
version = "0.1.1"

[dependencies]
tonic = "0.11.0"
async-trait = "0.1.78"
futures-util = "0.3.30"
tower = "0.4.13"
