[package]
name = "example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.36.0",  features = ["rt-multi-thread", "macros"] }
tonic = "0.12.0"
prost = "0.13.1"
tonic-middleware = "0.2.0"

[build-dependencies]
tonic-build = "0.12"

