[package]
name = "example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.47.1",  features = ["rt-multi-thread", "macros"] }
tonic = "0.14.1"
prost = "0.14.1"

[dependencies.tonic-middleware]
path = ".."

[build-dependencies]
tonic-build = "0.14.1"
