[package]
name = "integration_tests"
version = "0.2.3"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.36.0",  features = ["rt-multi-thread", "macros"] }
tonic = "0.13.0"
prost = "0.13.1"

[dependencies.tonic-middleware]
path = ".."

[build-dependencies]
tonic-build = "0.13.0"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full", "test-util"] }
serial_test = "3.0.0"
