[package]
name = "integration_tests"
version = "0.2.3"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.47.1",  features = ["rt-multi-thread", "macros"] }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"

[dependencies.tonic-middleware]
path = ".."

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tokio = { version = "1.4", features = ["full", "test-util"] }
serial_test = "3.2.0"
